# llmfun

./: .gitignore  .gitmodules  README.md  dub.sdl  imtui.mak  linenoise.mak  sqlite3.mak  tui.mak
config/: example.json
cpp_tui/: CMakeLists.txt  main.cpp  tui.cpp  tui.h  tui_api.cpp  tui_api.h
doc/: database.md  note.md  todo.md  tui_design.md
docker/d_dub/: .gitignore  Dockerfile  build.sh
docker/git/: Dockerfile  build.sh
docker/python3/: Dockerfile  build.sh
llm_eval_framework/: evaluator.py  main.py  scorer.py  test_loader.py
llm_eval_framework/datasets/: sample_tests.json
llm_eval_framework/doc/: specification_mvp.md
llm_fun/config/prompt/: AGENT.md  SUMMARY.md
llm_fun/config/thinking/: code_review.md  debugging.md  dlang_dub.md  self_improvements.md
llm_fun/data/memory/: programming_language_d.md
llmfun/config/prompt/: AGENT.md
llmfun/config/thinking/: code_analysis.md  code_task.md  implementation_plan.md  refactoring.md  self_improvements.md  system_design.md  update_memory.md
source/: app.d  llmfun_tui.c  utility_app.d
source/llm/: agent.d  agent_pool.d  chat.d  cli.d  coder.d  config.d  plan.d  query.d  summary_agent.d  table.d  types.d  utility.d  workarea.d
source/llm/metric/: calculator.d  feedback.d  metrics.d  monitor.d
source/llm/pipeline/: graph.d  package.d
source/llm/rag/: database.d  embedder.d  embedder_http.d  embedder_llama.d  package.d  rag.d  sqlite3_vec.c
source/llm/tool_call/: date.d  encoding.d  io.d  memory.d  metrics.d  package.d  pipeline.d  rag.d  sandbox.d  think.d  utility.d
source/llm/tui/: package.d
tools/: sync_workarea.sh
